# swine

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build-container.sh  build.Dockerfile  configure_and_build.sh  docker-compose.build.yml  docker-compose.yml  qtcreator.Dockerfile
docker/: Dockerfile  build.Dockerfile  docker-compose.build.yml  docker-compose.yml  qtcreator.Dockerfile
docs/: _config.yml  index.md  leading.smt2
examples/: ex6.smt2
include/: brute_force.h  config.h  constant_propagator.h  exp_finder.h  lemma_kind.h  preproc_kind.h  preprocessor.h  rewriter.h  swine.h  term_evaluator.h  term_flattener.h  util.h
scripts/: build-container.sh  bundle.sh  configure_and_build.sh
src/: brute_force.cpp  constant_propagator.cpp  exp_finder.cpp  lemma_kind.cpp  main.cpp  preproc_kind.cpp  preprocessor.cpp  rewriter.cpp  swine.cpp  term_evaluator.cpp  term_flattener.cpp  util.cpp  version.cpp.in
